fix(condo): DOMA-9987 fix symbols of transfer

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1425,11 +1425,11 @@
   "news.template.category.electricity": "\uD83D\uDCA1 Electricity",
   "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricity and elevators",
   "news.template.category.elevators": "\uD83D\uDED7 Elevators",
-  "news.template.category.gas": "\uD83E\uDDBA Gas",
-  "news.template.category.heating": "Heating",
+  "news.template.category.gas": "♨\uFE0F Gas",
+  "news.template.category.heating": "\uD83C\uDF21\uFE0F Heating",
   "news.template.category.intercom": "\uD83D\uDD22 Intercom",
-  "news.template.category.meters": "❗ Meters",
-  "news.template.category.other": "Other",
+  "news.template.category.meters": "⏱\uFE0F Meters",
+  "news.template.category.other": "\uD83C\uDFE0 Other",
   "news.template.category.snow": "❄\uFE0F Snow",
   "news.template.category.telephone": "\uD83D\uDCDE Telephone",
   "news.template.category.utilities": "\uD83D\uDCA1 All utilities",
