--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1767,8 +1767,10 @@
   "pages.condo.employeeRole.update.title": "Редактировать роль",
   "pages.condo.error.Description": "Проводим технические работы. Зайдите, пожалуйста, немного позже.",
   "pages.condo.error.NotFoundDescription": "Страница удалена или её никогда не существовало",
-  "pages.condo.error.NotFoundTitle": "Страница не найдена",
+  "pages.condo.error.NotFoundTitle": "Страница не найдена",
   "pages.condo.error.PageTitle": "Улучшаем сервис",
+  "pages.condo.error.TooManyRequestsTitle": "Слишком много запросов",
+  "pages.condo.error.TooManyRequestsDescription": "Вы отправили очень много запросов за короткое время. Пожалуйста, подождите — скоро доступ восстановится автоматически. Если вам нужна помощь, обратитесь в нашу тех. поддержку",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
