feat(condo): DOMA-10773 sendB2BAppPushMessage mutation and pass ticket created message (#5667)
* feat(condo): DOMA-10773 add types B2B_APP_MESSAGE_PUSH_TYPE PASS_TICKET_CREATED_MESSAGE_TYPE for Message

* feat(condo): DOMA-10773 add base sendB2BAppPushMessage mutation

* feat(condo): DOMA-10773 added checks for sendB2BAppPushMessage

* feat(condo): DOMA-10773 added tests

* feat(condo): DOMA-10773 rename B2CAppMessageSetting to AppMessageSetting, rename app field to b2cApp, added b2bApp field

* feat(condo): DOMA-10773 add tests for AppMessageSetting

* feat(condo): DOMA-10773 add delay and blacklisted logic in SendB2BAppPushMessageService, wrote tests

* feat(pass): DOMA-10773 update pass submodule

* feat(condo): DOMA-10773 migration with drop B2CAppMessageSetting and create AppMessageSetting

* feat(condo): DOMA-10773 migrate data in migration

* feat(pass): DOMA-10773 update message templates

* feat(condo): DOMA-10773 update B2BAppAccessRightSet test

* feat(condo): DOMA-10773 fix push titles test

* feat(condo): DOMA-10773 add title to B2B app custom push message

* fix(condo): DOMA-10773 added if (not) exists statements to migration

* refactor(condo): DOMA-10773 rebased, recreated migration, updated pass submodule

* refactor(condo): DOMA-10773 used getEmployedOrganizationsByPermissions in AppMessageSetting accesses

* refactor(condo): DOMA-10773 check b2bAppRole existence in AppMessageSetting access instead B2BAppContext

* feat(condo): DOMA-10773 added B2BAppRole check in SendB2BAppPushMesageService

* chore(condo): DOMA-10773 update schema

* feat(condo): DOMA-10773 update translations

* refactor(condo): DOMA-10773 fixes after review

* fix(condo): DOMA-10773 fix tests

* fix(condo): DOMA-10773 get locale from user for sendMessage and added todos in other same places

* fix(condo): DOMA-10773 add error if user is deleted

* fix(condo): DOMA-10773 remove isBlacklisted field, rename blockReason to reason


--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -647,10 +647,10 @@
   "contact.ConfirmDeleteMessage": "Все данные о жителе сотрутся навсегда",
   "contact.ConfirmDeleteTitle": "Удалить жителя?",
   "contact.Contact.ContactsEditor.AddNewContact": "Новый контакт",
-  "contact.Contact.ContactsEditor.NotResident": "Не житель",
   "contact.Contact.ContactsEditor.AnotherContact": "Другой контакт",
   "contact.Contact.ContactsEditor.Name": "ФИО",
   "contact.Contact.ContactsEditor.Name.placeholder": "Фамилия Имя Отчество",
+  "contact.Contact.ContactsEditor.NotResident": "Не житель",
   "contact.Contact.ContactsEditor.Phone": "Телефон",
   "contact.Contact.ContactsEditor.Phone.contactWithSamePhoneExists": "Такой номер телефона уже есть у этого помещения, выберите контакт из списка",
   "contact.ContactDuplicateError": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
@@ -1434,6 +1434,7 @@
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
+  "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Новая заявка на открытие счета в Сбере",
@@ -2055,9 +2056,9 @@
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Введите значение",
   "pages.condo.meter.create.AddMeterTourStepMessage": "Добавьте их, чтобы в дальнейшем заполнять только поле с показаниями",
   "pages.condo.meter.create.AddMeterTourStepTitle": "Приборы учета для этого помещения еще не добавлены",
+  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.LastReading": "Предыдущие показания",
   "pages.condo.meter.create.MeterReadings": "Показания",
-  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Введите показание, которое хотите передать",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Этот ресурс больше не принадлежит этой УК. Пожалуйста, обратитесь в техподдержку",
