feat(condo): DOMA-11043 added strict period form field on meter reporting period page

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -375,6 +375,7 @@
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "Meter with same account number exist in current organization in unit {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "Meter with same number and resource exist in current organization and linked with account number {accountNumbersCsv}. Please check your data.",
   "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Reading date ({givenDate}) can not be from the future",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "The date of the meter reading ({givenDate}) must not be later than the end of the specified period for taking readings ({notifyEndDay} day of each month)",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please remove next fields: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "The \"finish\" field can take values in the range from 1 to 31",
@@ -2121,6 +2122,14 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Finish must be greater than start",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "date of each month inclusive",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "For all properties",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Restrictions setup",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Until the end of the period",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Without restrictions",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Allow to take readings",
+  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "When the period ends, residents will be able to take readings, but they will see a notification that they will be taken into account next month",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "When the period ends, residents will be able to take readings, but they will see a notification that they will be taken into account next month",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Residents will receive a notification about the time limit for taking readings",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Create period",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "This period will apply to all properties that do not have a period with a specific address",
   "pages.condo.meter.reportingPeriod.create.start": "Beginning of period",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "The period will be permanently deleted.",
