--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -375,6 +375,7 @@
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "El medidor con el mismo número de cuenta existe en la organización actual en la propiedad {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "El contador con el mismo número y recurso existe en la organización actual y está vinculado con el número de cuenta {accountNumbersCsv}",
   "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "La fecha de lectura ({givenDate}) no puede ser del futuro",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "La fecha de transmisión de la lectura ({givenDate}) no debe ser posterior al final del período de lectura especificado ({notifyEndDay} el día de cada mes)",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please remove next fields: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "Fin de período sólo puede tener un valor entre 1 y 31",
@@ -2121,7 +2122,15 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "El final del período debe ser mayor que el principio del período",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "día de cada mes incluido",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Para todas las comunidades",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Configuración de restricciones",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Hasta el final del período",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Sin límites",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Permitir lecturas de medidores",
+  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Cuando finalice el período, los residentes podrán tomar lecturas, pero verán un aviso de que se contabilizarán el próximo mes",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Cuando finalice el período, los residentes podrán tomar lecturas, pero verán un aviso de que se contabilizarán el próximo mes",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Vecinos recibirán aviso para limitar plazo de entrega de medidores",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Este período será válido para todas las casas que no tengan un período con una dirección específica",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Crear período",
   "pages.condo.meter.reportingPeriod.create.start": "Inicio del período",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "El período se eliminará de forma permanente.",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "¿Eliminar período?",
