--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -375,6 +375,7 @@
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "ИПУ с таким лицевым счетом уже есть в организации в помещении {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "ИПУ с таким номером и ресурсом уже есть в организации на лицевом счете {accountNumbersCsv}. Проверьте, пожалуйста, правильность данных.",
   "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Дата передачи показания ({givenDate}) не должна быть больше текущей даты",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "Дата передачи показания ({givenDate}) не должна быть позднее конца заданного периода для сдачи показаний ({notifyEndDay} число каждого месяца)",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Количество тарифов в приборе учета {meterNumber}: {numberOfTariffs}, необходимо удалить значения из полей: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Количество тарифов в приборе учета {meterNumber}: {numberOfTariffs}, необходимо заполнить поля: {fieldsNames}",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "Конец периода может принимать значение только от 1 до 31",
@@ -2121,6 +2122,14 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Конец периода должен быть больше начала периода",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "числа каждого месяца включительно",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Для всех домов",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Настройка ограничений",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "До окончания периода",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Без ограничений",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Разрешить сдавать показания",
+  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Когда период закончится, жители смогут сдавать показания, но увидят уведомление о том, что они будут учтены в следующем месяце",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Когда период закончится, жители смогут сдавать показания, но увидят уведомление о том, что они будут учтены в следующем месяце",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Жители получат уведомление об ограничении сроков сдачи показаний",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Создать период",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Этот период будет действовать для всех домов, у которых нет периода с определенным адресом",
   "pages.condo.meter.reportingPeriod.create.start": "Начало периода",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "Период будет удален навсегда.",
