feat(condo): DOMA-9987 synchronization template
* chore(condo): DOMA-9987 add new templates and add receiving template from query

* fix(condo): DOMA-9987 fix symbols of transfer

* chore(condo): DOMA-9987 add link on submodule

* chore(condo): DOMA-9987 add link on submodule

* Update apps/condo/domains/news/components/NewsForm/BaseNewsForm.tsx

review changes

Co-authored-by: Mikhail Gorbunov <toplenboren@gmail.com>

* Revert "chore(condo): DOMA-9987 add link on submodule"

This reverts commit c6cf4de5046d758704e8ea5d1e4efb326dd8a703.

* Revert "chore(condo): DOMA-9987 add link on submodule"

This reverts commit 00cdde816a601b80996e0999d5b6fc92bed63645.

* feat(condo): DOMA-9987 add hook for normalize text and add test for this case

* fix(condo): DOMA-9987 delete replace

* Update apps/condo/domains/news/schema/NewsItemTemplate.test.js

Co-authored-by: Mikhail Gorbunov <toplenboren@gmail.com>

* fix(condo): DOMA-9987 review changes

* fix(condo): DOMA-9987 fix test

---------

Co-authored-by: Mikhail Gorbunov <toplenboren@gmail.com>
(cherry picked from commit 3f925addbcc189d9ef55d91b506d1bbfd84f82df)

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1421,11 +1421,11 @@
   "news.template.category.electricity": "\uD83D\uDCA1 Electricidad",
   "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricidad y ascensores",
   "news.template.category.elevators": "\uD83D\uDED7 Ascensor",
-  "news.template.category.gas": "\uD83E\uDDBA Gas",
-  "news.template.category.heating": "Calefacción",
+  "news.template.category.gas": "♨\uFE0F  Gas",
+  "news.template.category.heating": "\uD83C\uDF21\uFE0F Calefacción",
   "news.template.category.intercom": "\uD83D\uDD22 Interfono",
-  "news.template.category.meters": "❗ Contadores",
-  "news.template.category.other": "Otros",
+  "news.template.category.meters": "⏱\uFE0F Contadores",
+  "news.template.category.other": "\uD83C\uDFE0 Otros",
   "news.template.category.snow": "❄\uFE0F Nieve",
   "news.template.category.telephone": "\uD83D\uDCDE Teléfono",
   "news.template.category.utilities": "\uD83D\uDCA1 Todos servicios",
