feat(condo): DOMA-11012 fix langs

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -656,10 +656,10 @@
   "contact.ConfirmDeleteMessage": "This contact will be deleted forever",
   "contact.ConfirmDeleteTitle": "Delete contact?",
   "contact.Contact.ContactsEditor.AddNewContact": "New contact",
-  "contact.Contact.ContactsEditor.NotResident": "Not a resident",
   "contact.Contact.ContactsEditor.AnotherContact": "Another contact",
   "contact.Contact.ContactsEditor.Name": "Name",
   "contact.Contact.ContactsEditor.Name.placeholder": "Full name",
+  "contact.Contact.ContactsEditor.NotResident": "Not a resident",
   "contact.Contact.ContactsEditor.Phone": "Phone",
   "contact.Contact.ContactsEditor.Phone.contactWithSamePhoneExists": "This unitName already has this phone number, select a contact from the list",
   "contact.ContactDuplicateError": "Contact with this phone number is already registered in this room",
@@ -1118,11 +1118,10 @@
   "import.callbackModal.phoneLabel": "Phone number",
   "import.callbackModal.submitButtonLabel": "The number is correct – call",
   "import.callbackModal.title": "Check phone number",
-  "import.contact.genitive": "Contacts",
-  "import.contact.isVerifiedCheckbox.title": "Verify contacts",
-  "import.contact.isVerifiedCheckbox.tooltip.title": "Verified contacts can use services in the mobile app",
+  "import.contact.genitive": "residents",
+  "import.contact.isVerifiedCheckbox.title": "Automatically verify residents",
+  "import.contact.isVerifiedCheckbox.tooltip.title": "Verified contacts can use services in the mobile application. For example, they can leave a request for a pass.",
   "import.contact.plural": "Contacts",
-  "import.contact.prepositional": "Contacts",
   "import.contact.requiredFields": "Enter address, unit number, unit type, phone and name",
   "import.errorModal.title": "{plural} could not download",
   "import.fileImportHelpModal.alert.description": "The manager will add the information manually. We will call and let you know when everything is ready.",
@@ -1140,9 +1139,8 @@
   "import.helpModal.readInstruction.title": "Read the instructions",
   "import.helpModal.title": "We will help",
   "import.meter.genitive": "Meter readings",
-  "import.meter.plural": "Meters",
-  "import.meter.prepositional": "Meter readings",
-  "import.meter.requiredFields": "Specify address, unit and its type, account number, meter type, number of tariffs and date of transmission of the meter readings",
+  "import.meter.plural": "Meters and readings",
+  "import.meter.requiredFields": "Specify address, premises and its type, personal account number, meter type, meter number, number of tariffs and date of transmission of readings",
   "import.meterReading.plural": "Meter readings",
   "import.partlyDataLoadedModal.alert.description": "You can try to add or create a table from this data and try to download again",
   "import.partlyDataLoadedModal.alert.message": "It has become possible to add {success} of {total} {genitive}",
@@ -1152,19 +1150,17 @@
   "import.progressModal.title": "Data loading",
   "import.property.genitive": "Properties",
   "import.property.plural": "Properties",
-  "import.property.prepositional": "Properties",
   "import.property.requiredFields": "Specify the address and number of units, entrances and floors",
   "import.successModal.buttonLabel": "Continue",
   "import.successModal.title": "Everything worked out - data downloaded",
   "import.ticket.genitive": "Tickets",
   "import.ticket.plural": "Tickets",
-  "import.ticket.prepositional": "Tickets",
   "import.ticket.requiredFields": "Enter the address and describe the problem",
   "import.uploadButtonLabel": "Import list from file",
   "import.uploadModal.chooseAnotherFileForUpload": "Select another file to download",
   "import.uploadModal.chooseFileForUpload": "Select file to download",
   "import.uploadModal.exampleLinkMessage": "{genitive} list template.xlsx",
-  "import.uploadModal.message": "Download the file with {prepositional} information or use the template",
+  "import.uploadModal.message": "To do this, download the template, enter the information into a file and upload it to the platform",
   "import.uploadModal.needHelp": "Need help",
   "import.uploadModal.requiredFields.title": "Fill in the required fields",
   "import.uploadModal.title": "Add {plural} to the platform",
@@ -1430,22 +1426,24 @@
   "news.filed.shareNews.button": "Send news",
   "news.initialOrganizationNewsItem.body": "The property management company [name of the PMC] is pleased to welcome you to the Doma app!\nEvery day, we work to ensure your life in the building is comfortable. Our staff is ready to promptly address any questions regarding the maintenance of the building, its surrounding area, and the operations of the property management company.\n\nHow to reach us:\n1. Submit a ticket through the mobile app: you can do this in the «Tickets» section.\n2. Call the emergency dispatch service number: +7 000 000 0000 — operates 24/7.\n3. Call the property management office: +7 000 000 0000 — we operate [OFFICE HOURS].\n4. Visit the property management office: [OFFICE ADDRESS AND HOURS OF OPERATION].\n\nIn the app, we will share important news with you. Thank you for choosing us ❤️",
   "news.initialOrganizationNewsItem.title": "Management company letter 📩",
-  "news.template.category.cleaning": "Cleaning",
-  "news.template.category.electricity": "Electricity",
-  "news.template.category.electricityAndElevators": "Electricity and elevators",
-  "news.template.category.elevators": "Elevators",
-  "news.template.category.gas": "Gas",
-  "news.template.category.heating": "Heating",
-  "news.template.category.intercom": "Intercom",
-  "news.template.category.meters": "Meters",
-  "news.template.category.other": "Other",
-  "news.template.category.snow": "Snow",
-  "news.template.category.telephone": "Telephone",
-  "news.template.category.utilities": "All utilities",
-  "news.template.category.water": "Water",
+  "news.template.category.cleaning": "\uD83E\uDDF9 Cleaning",
+  "news.template.category.electricity": "\uD83D\uDCA1 Electricity",
+  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricity and elevators",
+  "news.template.category.elevators": "\uD83D\uDED7 Elevators",
+  "news.template.category.gas": "♨\uFE0F Gas",
+  "news.template.category.heating": "\uD83C\uDF21\uFE0F Heating",
+  "news.template.category.intercom": "\uD83D\uDD22 Intercom",
+  "news.template.category.meters": "⏱\uFE0F Meters",
+  "news.template.category.other": "\uD83C\uDFE0 Other",
+  "news.template.category.snow": "❄\uFE0F Snow",
+  "news.template.category.telephone": "\uD83D\uDCDE Telephone",
+  "news.template.category.utilities": "\uD83D\uDCA1 All utilities",
+  "news.template.category.water": "\uD83D\uDCA7 Water",
+  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.update.title": "Edit news",
+  "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Bank account creation",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "New request for Sber account creation",
@@ -2070,9 +2068,9 @@
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Enter value",
   "pages.condo.meter.create.AddMeterTourStepMessage": "Add them to fill in only the field with readings",
   "pages.condo.meter.create.AddMeterTourStepTitle": "Meters for this unit have not yet been added",
+  "pages.condo.meter.create.Date": "Date of deposition",
   "pages.condo.meter.create.LastReading": "Last meter reading",
   "pages.condo.meter.create.MeterReadings": "Meter readings",
-  "pages.condo.meter.create.Date": "Date of deposition",
   "pages.condo.meter.create.MetersAndReadings": "Meters and meter readings",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Enter the reading you want to send",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "This resource is owned by another organization. Please, contact tech support",
@@ -3218,12 +3216,12 @@
   "tour.title": "Tour",
   "tour.toTour": "Go to tour",
   "tour.viewGuide": "View Guide",
-  "trial.startPeriod": "Start trial period",
-  "trial.subTitle": "And then...",
-  "trial.title": "Free period of 14 days",
   "telegram.auth.start.shareButton": "Send contact",
   "telegram.auth.start.response": "Please send your contact",
   "telegram.auth.contact.wrongContact": "Please send your contact",
   "telegram.auth.contact.complete": "✅ Authorization completed successfully! Return to the app",
-  "telegram.auth.contact.error": "❌ An error occurred during authentication. Please start the authentication process from the beginning"
+  "telegram.auth.contact.error": "❌ An error occurred during authentication. Please start the authentication process from the beginning",
+  "trial.startPeriod": "Start trial period",
+  "trial.subTitle": "And then...",
+  "trial.title": "Free period of 14 days"
 }
