--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3223,7 +3223,7 @@
   "trial.title": "Periodo gratuito de 14 días",
   "telegram.auth.start.shareButton": "Enviar contacto",
   "telegram.auth.start.response": "Por favor, envía tu contacto",
-  "telegram.auth.contact.wrongContact": "Por favor, envía *tu* contacto",
-  "telegram.auth.contact.notFoundStartkey": "Error: clave de autorización no encontrada. Por favor, comienza el proceso de autorización desde el principio",
-  "telegram.auth.contact.complete": "✅ ¡Autorización completada con éxito! Regresa a la aplicación"
+  "telegram.auth.contact.wrongContact": "Por favor, envía tu contacto",
+  "telegram.auth.contact.complete": "✅ ¡Autorización completada con éxito! Regresa a la aplicación",
+  "telegram.auth.contact.error": "❌ Ocurrió un error durante la autenticación. Por favor, inicia el proceso de autenticación desde el principio"
 }
