--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -656,10 +656,10 @@
   "contact.ConfirmDeleteMessage": "Все данные о жителе сотрутся навсегда",
   "contact.ConfirmDeleteTitle": "Удалить жителя?",
   "contact.Contact.ContactsEditor.AddNewContact": "Новый контакт",
-  "contact.Contact.ContactsEditor.NotResident": "Не житель",
   "contact.Contact.ContactsEditor.AnotherContact": "Другой контакт",
   "contact.Contact.ContactsEditor.Name": "ФИО",
   "contact.Contact.ContactsEditor.Name.placeholder": "Фамилия Имя Отчество",
+  "contact.Contact.ContactsEditor.NotResident": "Не житель",
   "contact.Contact.ContactsEditor.Phone": "Телефон",
   "contact.Contact.ContactsEditor.Phone.contactWithSamePhoneExists": "Такой номер телефона уже есть у этого помещения, выберите контакт из списка",
   "contact.ContactDuplicateError": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
@@ -1118,11 +1118,10 @@
   "import.callbackModal.phoneLabel": "Номер телефона",
   "import.callbackModal.submitButtonLabel": "Номер верный — звоните",
   "import.callbackModal.title": "Проверьте номер телефона",
-  "import.contact.genitive": "Контактов жителей",
-  "import.contact.isVerifiedCheckbox.title": "Верифицировать контакты",
-  "import.contact.isVerifiedCheckbox.tooltip.title": "Верифицированные контакты могут пользоваться сервисами в мобильном приложении",
+  "import.contact.genitive": "жителей",
+  "import.contact.isVerifiedCheckbox.title": "Автоматически верифицировать жителей",
+  "import.contact.isVerifiedCheckbox.tooltip.title": "Верифицированные контакты могут пользоваться сервисами в мобильном приложении. Например, могут оставить заявку на пропуск.",
   "import.contact.plural": "Контакты жителей",
-  "import.contact.prepositional": "Контактах жителей",
   "import.contact.requiredFields": "Укажите адрес, номер помещения, тип помещения, телефон и ФИО",
   "import.errorModal.title": "{plural} не получилось загрузить",
   "import.fileImportHelpModal.alert.description": "Менеджер будет добавлять информацию вручную. Мы позвоним и сообщим, когда все будет готово.",
@@ -1140,9 +1139,8 @@
   "import.helpModal.readInstruction.title": "Изучить инструкцию",
   "import.helpModal.title": "Мы обязательно поможем",
   "import.meter.genitive": "Показаний ИПУ",
-  "import.meter.plural": "Приборы",
-  "import.meter.prepositional": "Показаниях ИПУ",
-  "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, количество тарифов и дату передачи показаний",
+  "import.meter.plural": "Приборы и показания",
+  "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, номер счетчика, количество тарифов и дату передачи показаний",
   "import.meterReading.plural": "Показания",
   "import.partlyDataLoadedModal.alert.description": "Незагруженные данные можно попробовать добавить вручную или сформировать из них таблицу и попробовать загрузить снова",
   "import.partlyDataLoadedModal.alert.message": "Получилось добавить {success} из {total} {genitive}",
@@ -1152,19 +1150,17 @@
   "import.progressModal.title": "Загрузка данных",
   "import.property.genitive": "Домов",
   "import.property.plural": "Дома",
-  "import.property.prepositional": "Домах",
   "import.property.requiredFields": "Укажите адрес и количество помещений, подъездов и этажей",
   "import.successModal.buttonLabel": "Продолжить",
   "import.successModal.title": "Все получилось — данные загружены",
   "import.ticket.genitive": "Заявок",
   "import.ticket.plural": "Заявки",
-  "import.ticket.prepositional": "Заявках",
   "import.ticket.requiredFields": "Укажите адрес и опишите проблему",
   "import.uploadButtonLabel": "Импорт списка из файла",
   "import.uploadModal.chooseAnotherFileForUpload": "Выбрать другой файл для загрузки",
   "import.uploadModal.chooseFileForUpload": "Выбрать файл для загрузки",
   "import.uploadModal.exampleLinkMessage": "Шаблон списка {genitive}.xlsx",
-  "import.uploadModal.message": "Загрузите свой файл с информацией о {prepositional} или воспользуйтесь шаблоном",
+  "import.uploadModal.message": "Для этого скачайте шаблон, внесите информацию в файл и загрузите его на платформу",
   "import.uploadModal.needHelp": "Нужна помощь",
   "import.uploadModal.requiredFields.title": "Заполните обязательные поля",
   "import.uploadModal.title": "Добавьте {plural} на платформу",
@@ -1430,22 +1426,24 @@
   "news.filed.shareNews.button": "Отправить новость",
   "news.initialOrganizationNewsItem.body": "Управляющая компания [название УК] рада приветствовать вас в приложении Doma!\nКаждый день мы работаем, чтобы ваша жизнь в доме была комфортной. Наши сотрудники готовы оперативно решать любые вопросы: о содержании дома, придомовой территории и работе управляющей компании.\n\nКак связаться с нами:\n1. Отправить заявку из мобильного приложения: сделать это можно в разделе «Заявки».\n2. Набрать номер аварийно-диспетчерской службы: +7 000 000 0000 — работает круглосуточно.\n3. Позвонить в офис управляющей компании: +7 000 000 0000  — работаем [РЕЖИМ РАБОТЫ].\n4. Прийти в офис управляющей компании: [АДРЕС И РЕЖИМ РАБОТЫ ОФИСА].\n\nВ приложении мы будем делиться с вами важными новостями. Спасибо, что выбрали нас ❤️",
   "news.initialOrganizationNewsItem.title": "Письмо управляющей компании 📩",
-  "news.template.category.cleaning": "Уборка",
-  "news.template.category.electricity": "Электроэнергия",
-  "news.template.category.electricityAndElevators": "Электроэнергия и лифты",
-  "news.template.category.elevators": "Лифты",
-  "news.template.category.gas": "Газ",
-  "news.template.category.heating": "Отопление",
-  "news.template.category.intercom": "Домофон",
-  "news.template.category.meters": "Счетчики",
-  "news.template.category.other": "Другое",
-  "news.template.category.snow": "Снег",
-  "news.template.category.telephone": "Телефон",
-  "news.template.category.utilities": "Все коммунальные услуги",
-  "news.template.category.water": "Вода",
+  "news.template.category.cleaning": "\uD83E\uDDF9 Уборка",
+  "news.template.category.electricity": "\uD83D\uDCA1 Электроэнергия",
+  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Электроэнергия и лифты",
+  "news.template.category.elevators": "\uD83D\uDED7 Лифты",
+  "news.template.category.gas": "♨\uFE0F  Газ",
+  "news.template.category.heating": "\uD83C\uDF21\uFE0F Отопление",
+  "news.template.category.intercom": "\uD83D\uDD22 Домофон",
+  "news.template.category.meters": "⏱\uFE0F Счетчики",
+  "news.template.category.other": "\uD83C\uDFE0 Другое",
+  "news.template.category.snow": "❄\uFE0F Снег",
+  "news.template.category.telephone": "\uD83D\uDCDE Телефон",
+  "news.template.category.utilities": "\uD83D\uDCA1 Все коммунальные услуги",
+  "news.template.category.water": "\uD83D\uDCA7 Вода",
+  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
+  "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Новая заявка на открытие счета в Сбере",
@@ -2070,9 +2068,9 @@
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Введите значение",
   "pages.condo.meter.create.AddMeterTourStepMessage": "Добавьте их, чтобы в дальнейшем заполнять только поле с показаниями",
   "pages.condo.meter.create.AddMeterTourStepTitle": "Приборы учета для этого помещения еще не добавлены",
+  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.LastReading": "Предыдущие показания",
   "pages.condo.meter.create.MeterReadings": "Показания",
-  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Введите показание, которое хотите передать",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Этот ресурс больше не принадлежит этой УК. Пожалуйста, обратитесь в техподдержку",
@@ -3218,12 +3216,12 @@
   "tour.title": "Путеводитель",
   "tour.toTour": "В путеводитель",
   "tour.viewGuide": "Смотреть гайд",
-  "trial.startPeriod": "Начать пробный период",
-  "trial.subTitle": "А после...",
-  "trial.title": "Бесплатный период 14 дней",
   "telegram.auth.start.shareButton": "Отправить контакт",
   "telegram.auth.start.response": "Пожалуйста, отправьте свой контакт",
   "telegram.auth.contact.wrongContact": "Пожалуйста, отправьте ваш контакт",
   "telegram.auth.contact.complete": "✅ Авторизация успешно завершена! Возвращайтесь в приложение",
-  "telegram.auth.contact.error": "❌ Произошла ошибка при авторизации. Начните авторизацию с самого начала"
+  "telegram.auth.contact.error": "❌ Произошла ошибка при авторизации. Начните авторизацию с самого начала",
+  "trial.startPeriod": "Начать пробный период",
+  "trial.subTitle": "А после...",
+  "trial.title": "Бесплатный период 14 дней"
 }
