--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -3219,8 +3219,8 @@
   "telegram.auth.start.shareButton": "Отправить контакт",
   "telegram.auth.start.response": "Пожалуйста, отправьте свой контакт",
   "telegram.auth.contact.wrongContact": "Пожалуйста, отправьте ваш контакт",
-  "telegram.auth.contact.complete": "✅ Авторизация успешно завершена! Возвращайтесь в приложение",
-  "telegram.auth.contact.error": "❌ Произошла ошибка при авторизации. Начните авторизацию с самого начала",
+  "telegram.auth.contact.complete": "Авторизация успешно завершена! Возвращайтесь в приложение",
+  "telegram.auth.error": "Произошла ошибка при авторизации. Начните авторизацию с самого начала",
   "trial.startPeriod": "Начать пробный период",
   "trial.subTitle": "А после...",
   "trial.title": "Бесплатный период 14 дней"
