feat(condo): DOMA-10771 play audio on new message

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1426,26 +1426,27 @@
   "news.filed.shareNews.button": "Send news",
   "news.initialOrganizationNewsItem.body": "The property management company [name of the PMC] is pleased to welcome you to the Doma app!\nEvery day, we work to ensure your life in the building is comfortable. Our staff is ready to promptly address any questions regarding the maintenance of the building, its surrounding area, and the operations of the property management company.\n\nHow to reach us:\n1. Submit a ticket through the mobile app: you can do this in the «Tickets» section.\n2. Call the emergency dispatch service number: +7 000 000 0000 — operates 24/7.\n3. Call the property management office: +7 000 000 0000 — we operate [OFFICE HOURS].\n4. Visit the property management office: [OFFICE ADDRESS AND HOURS OF OPERATION].\n\nIn the app, we will share important news with you. Thank you for choosing us ❤️",
   "news.initialOrganizationNewsItem.title": "Management company letter 📩",
-  "news.template.category.cleaning": "\uD83E\uDDF9 Cleaning",
-  "news.template.category.electricity": "\uD83D\uDCA1 Electricity",
-  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricity and elevators",
-  "news.template.category.elevators": "\uD83D\uDED7 Elevators",
-  "news.template.category.gas": "♨\uFE0F Gas",
-  "news.template.category.heating": "\uD83C\uDF21\uFE0F Heating",
-  "news.template.category.intercom": "\uD83D\uDD22 Intercom",
-  "news.template.category.meters": "⏱\uFE0F Meters",
-  "news.template.category.other": "\uD83C\uDFE0 Other",
-  "news.template.category.snow": "❄\uFE0F Snow",
-  "news.template.category.telephone": "\uD83D\uDCDE Telephone",
-  "news.template.category.utilities": "\uD83D\uDCA1 All utilities",
-  "news.template.category.water": "\uD83D\uDCA7 Water",
-  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
+  "news.template.category.cleaning": "🧹 Cleaning",
+  "news.template.category.electricity": "💡 Electricity",
+  "news.template.category.electricityAndElevators": "💡 Electricity and elevators",
+  "news.template.category.elevators": "🛗 Elevators",
+  "news.template.category.fireProtection": "👨🏻 Противопожарное",
+  "news.template.category.gas": "♨️ Gas",
+  "news.template.category.heating": "🌡️ Heating",
+  "news.template.category.intercom": "🔢 Intercom",
+  "news.template.category.meters": "⏱️ Meters",
+  "news.template.category.other": "🏠 Other",
+  "news.template.category.snow": "❄️ Snow",
+  "news.template.category.telephone": "📞 Telephone",
+  "news.template.category.utilities": "💡 All utilities",
+  "news.template.category.water": "💧 Water",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.update.title": "Edit news",
   "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "New pass ticket",
   "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "New ticket comment",
   "notification.UserMessagesList.message.TICKET_CREATED.label": "New ticket",
+  "notification.UserMessagesList.newMessagePageTitle": "New notification",
   "notification.UserMessagesList.title": "Notifications",
   "notification.UserMessagesList.viewed": "Viewed",
   "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "About new pass tickets",
